--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="content">
             <img src="UX_UI_HW_17/images/Me.JPG" width ="50%" height ="50%">
             <p>
-                I’m a UX Designer and Web Developer with a passion for storytelling. I build useful and relevant
+                I’m a UX Designer and Web Developer with a passion for storytelling. I build useful, relevant
                 experiences through research and design.
             </p>
             <button> Download Resume </button>
