--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="UX_UI_HW_17/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>
 
     </title>
@@ -11,7 +11,7 @@
 <body>
     <header class="nav inline-block">
         <div class="inline-block logo">
-            <img src="UX_UI_HW_17/images/logo.png">
+            <img src="images/logo.png">
         </div>
         <nav class="inline-block"> 
             <ul>
